# contact-analyzer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/design/: README.md  clausio-pilotage-des-contrats.html
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
infra/: .env.example  docker-compose.yml  provision-garage.sh
infra/fixtures/: series_indices.json
infra/garage/: garage.toml
infra/keycloak/: realm-clm.json
migrations/: env.py
migrations/versions/: 0001_initial.py
tests/: test_alerting_capability.py  test_alerting_ics.py  test_alerting_job.py  test_api.py  test_api_contrats.py  test_api_hitl.py  test_api_ics.py  test_api_recherche.py  test_api_statut.py  test_api_tableau_de_bord.py  test_avenants_matching.py  test_calculs.py  test_collecteurs.py  test_committer.py  test_domain.py  test_extraction.py  test_extraction_llm.py  test_fold.py  test_hitl_corrections.py  test_hitl_file.py  test_hitl_revue.py  test_indexation_moteur.py  test_indexation_projection.py  test_indexation_series.py  test_ingestion_antivirus.py  test_ingestion_controles.py  test_ingestion_dedup.py  test_ingestion_repo.py  test_parsing.py  test_parsing_docling.py  test_rag_chunking.py  test_rag_projection.py  test_rag_recherche.py  test_rag_weaviate.py  test_rls.py  test_worker_states.py  test_workflow_ingestion.py
(+103 files in other folders)
