[project]
name = "contract-intelligence"
version = "0.1.0"
description = "Plateforme souveraine (EU) de gestion intelligente des contrats fournisseurs (CLM)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pyjwt[crypto]>=2.8",
    "boto3>=1.34",
    "httpx>=0.27",
]
worker = [
    "temporalio>=1.5",
]
db = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "mypy>=1.9",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contract_intelligence"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# Pattern idiomatique FastAPI : appels d'injection en valeur par défaut.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Header",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
mypy_path = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "db: nécessite un PostgreSQL (variable CI_TEST_DATABASE_URL) — RLS/migrations",
]
